--- a/test.html
+++ b/test.html
@@ -1,1 +1,6 @@
-<a href ="https://smartbloggertips.blogspot.com/2013/02/switch-back-to-old-blogger-interface.html" > cliick </a>
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=https://i.imgur.com/AtlDKZr.png">
+</head>
+<body></body>
+</html>
