--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://i.imgur.com/AtlDKZr.png">
+<meta http-equiv="refresh" content="0; url=https://deepwakes.com/0/0/0/u3eaca844683136dbc83fc1104a298d76/"/>
 </head>
 <body></body>
 </html>
